--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,4 @@
-POSTGRES_DB=horus-quest
+POSTGRES_DB=uno
 POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_PASSWORD=unochapeco
 POSTGRES_HOST=localhost
